--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col-4">
-                <img src="fotosaya.jpeg" alt="Aisyah Siti Zahra" style="height: 200px; margin-top: 10px;">
+                <img src="fotosaya.jpeg" alt="Aisyah Siti Zahra" class="rounded-circle" style="height: 200px; margin-top: 10px;">
             </div>
             <div class="col-8">
                 <div class="row" style="margin-top: 50px">
